fix the overflow bug that was causing unnecessary horizontal scorlling of the page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 .container-fluid {
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
     font-family: 'Yatra One', 'cursive';
 }
 
